--- a/java/demo/Dockerfile
+++ b/java/demo/Dockerfile
@@ -1,22 +1,20 @@
-# FROM maven
-# 
-# RUN git clone https://github.com/adalrsjr1/openshift-demos.git
-# RUN mvn -f openshift-demos/java/demo/pom.xml clean package
-# 
-# FROM open-liberty:kernel
-# 
-# COPY --from=0 /openshift-demos/java/demo/target .
-# 
-# # Add my app and config
-# COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/liberty/wlp/usr/servers/demo/server.xml /config/
-# COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/liberty/wlp/usr/servers/demo/server.env /config/
-# COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/liberty/wlp/usr/servers/demo/bootstrap.properties /config/
-# COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/liberty/wlp/usr/servers/demo/ /opt/ol/helpers/build/configuration_snippets
-# 
-# # Add app to root folder, uses /config/dropins/ for /<project>/index.html
-# COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/demo.war /config/apps/
+FROM maven
+
+RUN git clone https://github.com/adalrsjr1/openshift-demos.git
+RUN mvn -f openshift-demos/java/demo/pom.xml clean package
 
 FROM open-liberty:kernel
+
+COPY --from=0 /openshift-demos/java/demo/target .
+
+# Add my app and config
+COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/liberty/wlp/usr/servers/demo/server.xml /config/
+COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/liberty/wlp/usr/servers/demo/server.env /config/
+COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/liberty/wlp/usr/servers/demo/bootstrap.properties /config/
+COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/liberty/wlp/usr/servers/demo/ /opt/ol/helpers/build/configuration_snippets
+
+# Add app to root folder, uses /config/dropins/ for /<project>/index.html
+COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/demo.war /config/apps/
 
 # Optional functionality
 ARG MP_MONITORING=true
@@ -27,4 +25,4 @@ EXPOSE 8543
 EXPOSE 9080
 EXPOSE 9443
 
-RUN configure.sh
+# RUN configure.sh
