update server.xml to get params from env

--- a/java/demo/Dockerfile
+++ b/java/demo/Dockerfile
@@ -3,7 +3,7 @@ FROM maven
 RUN git clone https://github.com/adalrsjr1/openshift-demos.git
 RUN mvn -f openshift-demos/java/demo/pom.xml clean package
 
-FROM open-liberty:kernel
+FROM open-liberty:kernel-java12
 
 COPY --from=0 /openshift-demos/java/demo/target .
 
@@ -20,9 +20,17 @@ COPY --from=0 --chown=1001:0 openshift-demos/java/demo/target/demo.war /config/a
 ARG MP_MONITORING=true
 ARG MP_HEALTH_CHECK=true
 
+ENV MAX_KEEP_ALIVE_REQUESTS=-1
+ENV MAX_POOL_SIZE=50
+
+# to customize server runing
+# ENV JVM_ARGS -Xms0K -Xmx0K
+
 EXPOSE 8181
 EXPOSE 8543
 EXPOSE 9080
 EXPOSE 9443
+
+#CMD ["/opt/ol/wlp/bin/server", "run", "defaultServer"
 
 # RUN configure.sh
